Started example application.

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,3 +1,4 @@
 # Create a library from the source files in this directory.
 
-add_subdirectory(server)
+#add_subdirectory(server)
+add_subdirectory(example)
