--- a/apps/adapt/CMakeLists.txt
+++ b/apps/adapt/CMakeLists.txt
@@ -64,8 +64,7 @@ add_executable (adapted
   adapted.cpp
   )
 
-#target_link_libraries (adapted VRMain VRPlugin VRDisplay VRIndex VRMath VRNet ${ALL_LIBS})
-target_link_libraries (adapted VRMain VRIndex VRMath VRNet ${ALL_LIBS})
+target_link_libraries (adapted VRMain VRPlugin VRDisplay VRIndex VRMath VRNet ${ALL_LIBS})
 
 add_executable (adapted_server
   adapted_server.cpp
