Separated out C-callback subclasses from interface header files and deleted template subclasses. Functors now have their own files VRCallback*, and were renamed to callbacks because they were not functors. VRDisplayDevice was updated to incorporate these changes, and its template functions were deleted. The template functions in all of these classes were never used and added no functionality. VRRenderState was added to the MinVR namespace.

--- a/display/CMakeLists.txt
+++ b/display/CMakeLists.txt
@@ -4,6 +4,9 @@ project (VRDisplay)
 
 set (${PROJECT_NAME}_source_files 
 	VRDisplayDevice.cpp
+	VRCallbackDisplayAction.cpp
+	VRCallbackDisplayFrameAction.cpp
+	VRCallbackRenderer.cpp
 	concrete/BaseDisplayDevice.cpp
 	concrete/BaseDisplayFactory.cpp
 	concrete/CommandLineDisplay.cpp
