Added initial VRDisplayGraph classes. Their fate as certain as a coin toss, they are but blocks of marble waiting to reveal the sculptor's masterpiece.

--- a/display/CMakeLists.txt
+++ b/display/CMakeLists.txt
@@ -13,6 +13,7 @@ set (${PROJECT_NAME}_source_files
 	concrete/CompositeDisplay.cpp
 	concrete/CompositeDisplayFactory.cpp
 	concrete/DataIndexWrapperDisplay.cpp
+	display-graph/VRDisplayGraphNode.cpp
 )
 
 add_library (${PROJECT_NAME} ${${PROJECT_NAME}_source_files})
