Nuked display directory to support display graph.

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Create a library from the source files in this directory.
 
 #add_subdirectory(server)
-add_subdirectory(example)
+#add_subdirectory(example)
 add_subdirectory (config)
 add_subdirectory (adapt)
 add_subdirectory (net)
