--- a/display/CMakeLists.txt
+++ b/display/CMakeLists.txt
@@ -8,6 +8,7 @@ set (${PROJECT_NAME}_source_files
 	graphics/VRGraphicsWindowNode.cpp
 	graphics/stereo/VRStereoFormatter.cpp
 	graphics/structure/VRViewportNode.cpp
+	graphics/structure/VRViewport.cpp
 )
 
 add_library (${PROJECT_NAME} ${${PROJECT_NAME}_source_files})
