--- a/contrib/CMakeLists.txt
+++ b/contrib/CMakeLists.txt
@@ -23,7 +23,7 @@ if (BASE_PLUGINS)
 endif(BASE_PLUGINS)
 
 #------------------OpenGL-----------------------------
-
+if(false)
 option(MINVR_OPENGL_PLUGIN "If enabled, OpenGL plugin will be installed" OFF)
 if (MINVR_OPENGL_PLUGIN OR BASE_GRAPHICS_PLUGINS)
 	add_subdirectory (plugins/OpenGL)
@@ -35,13 +35,14 @@ option(MINVR_THREADING_PLUGIN "If enabled, GLFW plugin will be installed" OFF)
 if (MINVR_THREADING_PLUGIN OR BASE_GRAPHICS_PLUGINS)
 	add_subdirectory (plugins/Threading)
 endif()
-
+endif()
 #------------------GLFW-----------------------------
 option(MINVR_GLFW_PLUGIN "If enabled, GLFW plugin will be installed" OFF)
 if (MINVR_GLFW_PLUGIN OR BASE_GRAPHICS_PLUGINS)
 	add_subdirectory (plugins/GLFW)
 endif()
 
+if(false)
 #------------------GLUT-----------------------------
 option(MINVR_GLUT_PLUGIN "If enabled, GLUT plugin will be installed" OFF)
 
@@ -51,7 +52,7 @@ if (GLUT_FOUND)
 		add_subdirectory (plugins/GLUT)
 	endif()
 endif()
-
+endif()
 #------------------GLFW-------------------------------
 
 if (false)
