--- a/src/plugin/CMakeLists.txt
+++ b/src/plugin/CMakeLists.txt
@@ -3,13 +3,8 @@
 project (VRPlugin)
 
 set (${PROJECT_NAME}_source_files 
-	Plugin.h
-	PluginFramework.h
-	PluginInterface.h
-	PluginManager.cpp
-	PluginManager.h
-	SharedLibrary.cpp
-	SharedLibrary.h
+	VRPluginManager.cpp
+	VRSharedLibrary.cpp
 )
 
 add_library (${PROJECT_NAME} ${${PROJECT_NAME}_source_files})
