--- a/src/config/CMakeLists.txt
+++ b/src/config/CMakeLists.txt
@@ -1,31 +1,14 @@
-cmake_minimum_required(VERSION 2.8)
-project(VRIndex)
-
-set(${PROJECT_NAME}_headers
-  VRDatum.h
-  VRDatumFactory.h
-  VRDataIndex.h
-  VRDataQueue.h
-  )
 
 set(${PROJECT_NAME}_source_files
-  ${${PROJECT_NAME}_headers}
-  VRDatum.cpp
-  VRDatumFactory.cpp
-  VRDataIndex.cpp
-  VRDataQueue.cpp
-  Cxml/attribute.cpp
-  Cxml/Cxml.cpp
-  Cxml/element.cpp
-  Cxml/utils.cpp
-  Cxml/XML.cpp
+  ${${PROJECT_NAME}_source_files}
+  ${CMAKE_CURRENT_SOURCE_DIR}/VRDatum.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/VRDatumFactory.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/VRDataIndex.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/VRDataQueue.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/Cxml/attribute.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/Cxml/Cxml.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/Cxml/element.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/Cxml/utils.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/Cxml/XML.cpp
+  PARENT_SCOPE
   )
-
-add_library(${PROJECT_NAME} ${${PROJECT_NAME}_source_files})
-
-install(DIRECTORY ${PROJECT_SOURCE_DIR}  DESTINATION "include" FILES_MATCHING PATTERN "*.h")
-
-install( TARGETS ${PROJECT_NAME}
-         LIBRARY DESTINATION lib
-         ARCHIVE DESTINATION lib
-         RUNTIME DESTINATION bin)
