--- a/src/net/CMakeLists.txt
+++ b/src/net/CMakeLists.txt
@@ -1,21 +1,8 @@
-# Create a library from the source files in this directory.
 
-project (VRNet)
-
-set (${PROJECT_NAME}_source_files 
-	VRNetClient.cpp
-	VRNetClient.h
-	VRNetInterface.cpp
-	VRNetInterface.h
-	VRNetServer.cpp
-	VRNetServer.h
-)
-
-add_library (${PROJECT_NAME} ${${PROJECT_NAME}_source_files})
-
-install(DIRECTORY ${PROJECT_SOURCE_DIR}  DESTINATION "include" FILES_MATCHING PATTERN "*.h")
-
-install( TARGETS ${PROJECT_NAME}
-         LIBRARY DESTINATION lib
-         ARCHIVE DESTINATION lib
-         RUNTIME DESTINATION bin)
+set(${PROJECT_NAME}_source_files
+	${${PROJECT_NAME}_source_files}	
+	${CMAKE_CURRENT_SOURCE_DIR}/VRNetClient.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/VRNetInterface.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/VRNetServer.cpp
+	PARENT_SCOPE
+ )
