--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,7 +47,6 @@
 # as ${MINVR_BINARY_DIR}.
 
 cmake_minimum_required (VERSION 2.8.2) 
-project (MinVR)
 
 if(NOT CMAKE_BUILD_TYPE)
   set( CMAKE_BUILD_TYPE Debug CACHE STRING
@@ -59,15 +58,6 @@ if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
     set (CMAKE_INSTALL_PREFIX "${${PROJECT_NAME}_SOURCE_DIR}/build/install" CACHE PATH "default install path" FORCE )
 endif()
 
-# Use the root of the MinVR tree as an include dir, then include headers like this:
-# #include <event/VREvent.h>
-
-include_directories (
-  ${CMAKE_CURRENT_SOURCE_DIR}
-  ${CMAKE_CURRENT_SOURCE_DIR}/src
-)
-
-enable_testing()
 
 # Let's follow the convention of putting all of the libs in "build/lib" and all
 # of the exes in "build/bin".  To distingusih between debugging, release, and
@@ -107,9 +97,6 @@ foreach (CONF ${CMAKE_CONFIGURATION_TYPES})
 endforeach(CONF CMAKE_CONFIGURATION_TYPES)
 
 
-file (GLOB srcfiles ${CMAKE_CURRENT_SOURCE_DIR}/tests/net/*.cpp)
-source_group ("tests" FILES ${srcfiles})
-
 if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
   # Linux specific code
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC") 
@@ -124,19 +111,154 @@ if (WIN32)
   # Windows-specific
 endif (WIN32)
 
-# Recurse into the following subdirs to build the core MinVR set of libraries:
-# (Uncomment the lines below as we add .cpp files to those directories.)
 
+
+enable_testing()
+
+set(vr_src_dir ${CMAKE_CURRENT_SOURCE_DIR}/src)
+
+set(vr_config_cpp
+  ${vr_src_dir}/config/VRDataIndex.cpp
+  ${vr_src_dir}/config/VRDataQueue.cpp
+  ${vr_src_dir}/config/VRDatum.cpp
+  ${vr_src_dir}/config/VRDatumFactory.cpp
+  ${vr_src_dir}/config/Cxml/attribute.cpp
+  ${vr_src_dir}/config/Cxml/Cxml.cpp
+  ${vr_src_dir}/config/Cxml/element.cpp
+  ${vr_src_dir}/config/Cxml/utils.cpp
+  ${vr_src_dir}/config/Cxml/XML.cpp
+)
+
+set(vr_config_h
+  ${vr_src_dir}/config/VRCoreTypes.h
+  ${vr_src_dir}/config/VRDataIndex.h
+  ${vr_src_dir}/config/VRDataQueue.h
+  ${vr_src_dir}/config/VRDatum.h
+  ${vr_src_dir}/config/VRDatumFactory.h
+  ${vr_src_dir}/config/Cxml/attribute.h
+  ${vr_src_dir}/config/Cxml/Cxml.h
+  ${vr_src_dir}/config/Cxml/element.h
+  ${vr_src_dir}/config/Cxml/utils.h
+  ${vr_src_dir}/config/Cxml/XML.h
+)
+
+set(vr_display_cpp
+  ${vr_src_dir}/display/VRConsoleNode.cpp
+  ${vr_src_dir}/display/VRDisplayNode.cpp
+  ${vr_src_dir}/display/VRGraphicsWindowNode.cpp
+  ${vr_src_dir}/display/VRGroupNode.cpp
+  ${vr_src_dir}/display/VROffAxisProjectionNode.cpp
+  ${vr_src_dir}/display/VRStereoNode.cpp
+  ${vr_src_dir}/display/VRViewportNode.cpp
+)
+
+set(vr_display_h
+  ${vr_src_dir}/display/VRConsoleNode.h
+  ${vr_src_dir}/display/VRDisplayNode.h
+  ${vr_src_dir}/display/VRGraphicsToolkit.h
+  ${vr_src_dir}/display/VRGraphicsWindowNode.h
+  ${vr_src_dir}/display/VRGroupNode.h
+  ${vr_src_dir}/display/VROffAxisProjectionNode.h
+  ${vr_src_dir}/display/VRStereoNode.h
+  ${vr_src_dir}/display/VRViewportNode.h
+  ${vr_src_dir}/display/VRWindowToolkit.h
+)
+
+set(vr_input_cpp
+)
+
+set(vr_input_h
+  ${vr_src_dir}/input/VRInputDevice.h
+)
+
+set(vr_main_cpp
+  ${vr_src_dir}/main/VRFactory.cpp
+  ${vr_src_dir}/main/VRMain.cpp
+)
+
+set(vr_main_h
+  ${vr_src_dir}/main/VREventHandler.h
+  ${vr_src_dir}/main/VRFactory.h
+  ${vr_src_dir}/main/VRMain.h
+  ${vr_src_dir}/main/VRMainInterface.h
+  ${vr_src_dir}/main/VRRenderHandler.h
+)
+
+set(vr_math_cpp
+  ${vr_src_dir}/math/VRMath.cpp
+  ${vr_src_dir}/math/VRRect.cpp
+)
+
+set(vr_math_h
+  ${vr_src_dir}/math/VRMath.h
+  ${vr_src_dir}/math/VRRect.h
+)
+
+set(vr_net_cpp
+  ${vr_src_dir}/net/VRNetClient.cpp
+  ${vr_src_dir}/net/VRNetInterface.cpp
+  ${vr_src_dir}/net/VRNetServer.cpp
+)
+
+set(vr_net_h
+  ${vr_src_dir}/net/VRNetClient.h
+  ${vr_src_dir}/net/VRNetInterface.h
+  ${vr_src_dir}/net/VRNetServer.h
+)
+
+set(vr_plugin_cpp
+  ${vr_src_dir}/plugin/VRPluginManager.cpp
+  ${vr_src_dir}/plugin/VRSharedLibrary.cpp
+)
+
+set(vr_plugin_h
+  ${vr_src_dir}/plugin/VRPlugin.h
+  ${vr_src_dir}/plugin/VRPluginManager.h
+  ${vr_src_dir}/plugin/VRSharedLibrary.h
+)
+
+set(vr_sources 
+  ${vr_config_cpp} ${vr_config_h}
+  ${vr_display_cpp} ${vr_display_h}
+  ${vr_input_h}
+  ${vr_main_cpp} ${vr_main_h}
+  ${vr_math_cpp} ${vr_math_h}
+  ${vr_net_cpp} ${vr_net_h}
+  ${vr_plugin_cpp} ${vr_plugin_h}
+)
+
+source_group("config\\Header Files" FILES ${vr_config_h})
+source_group("config\\Source Files" FILES ${vr_config_cpp})
+source_group("display\\Header Files" FILES ${vr_display_h})
+source_group("display\\Source Files" FILES ${vr_display_cpp})
+source_group("input\\Header Files" FILES ${vr_input_h})
+source_group("input\\Source Files" FILES ${vr_input_cpp})
+source_group("main\\Header Files" FILES ${vr_main_h})
+source_group("main\\Source Files" FILES ${vr_main_cpp})
+source_group("math\\Header Files" FILES ${vr_math_h})
+source_group("math\\Source Files" FILES ${vr_math_cpp})
+source_group("net\\Header Files" FILES ${vr_net_h})
+source_group("net\\Source Files" FILES ${vr_net_cpp})
+source_group("plugin\\Header Files" FILES ${vr_plugin_h})
+source_group("plugin\\Source Files" FILES ${vr_plugin_cpp})
+
+
+project(MinVR)
+
+include_directories(
+  ${vr_src_dir}
+)
+
+add_library(MinVR ${vr_sources})
+
+
+
+# Recurse into the following subdirs to programs that compile
+# separately from the MinVR Core lib
+
+#add_subdirectory (plugins)
 #add_subdirectory (examples)
-add_subdirectory (src)
-add_subdirectory (plugins)
-
-# Now, build some programs, such as tests, that depend upon the MinVR libraries:
-
 #add_subdirectory (tests)
-#add_subdirectory (tests/eventdata)
-add_subdirectory (tests/config)
-
 
 
 
