a couple of edits to setup folder structure in xcode

--- a/examples/SimpleOpenGLGLFW/CMakeLists.txt
+++ b/examples/SimpleOpenGLGLFW/CMakeLists.txt
@@ -5,7 +5,24 @@ find_package(OpenGL REQUIRED)
 
 include_directories(${OPENGL_INCLUDE_DIR})
 
-add_executable(SimpleOpenGLGLFW vrexample.cpp)
+set(vr_example_source_files
+  vrexample.cpp
+)
+
+set(vr_example_config_files
+  desktop.xml
+  ivlabcave.xml
+  simple.xml
+  YURT.xml
+)
+
+set_source_files_properties(${vr_example_config_files} PROPERTIES HEADER_FILE_ONLY TRUE)
+
+source_group("Config Files" FILES ${vr_example_config_files})
+
+
+
+add_executable(SimpleOpenGLGLFW ${vr_example_source_files} ${vr_example_config_files})
 
 target_link_libraries(SimpleOpenGLGLFW MinVR ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY})
 
