--- a/plugins/GLFW/CMakeLists.txt
+++ b/plugins/GLFW/CMakeLists.txt
@@ -169,3 +169,6 @@ install( TARGETS ${PROJECT_NAME}
          LIBRARY DESTINATION ${VRPlugins_install_dir}/${PROJECT_NAME}/lib
          ARCHIVE DESTINATION ${VRPlugins_install_dir}/${PROJECT_NAME}/lib
          RUNTIME DESTINATION ${VRPlugins_install_dir}/${PROJECT_NAME}/bin)
+
+set_property(TARGET MinVR_GLFW PROPERTY FOLDER "plugins")
+set_property(TARGET glfw PROPERTY FOLDER "plugins/dependencies/libGLFW")
