Added off axis projection calculation for view and projection matrices.

--- a/examples/SimpleOpenGLGLFW/CMakeLists.txt
+++ b/examples/SimpleOpenGLGLFW/CMakeLists.txt
@@ -20,11 +20,16 @@ set_source_files_properties(${vr_example_config_files} PROPERTIES HEADER_FILE_ON
 
 source_group("Config Files" FILES ${vr_example_config_files})
 
+if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+	find_package(Threads)
+	find_package(X11)
+	set(ALL_LIBS ${ALL_LIBS} ${CMAKE_THREAD_LIBS_INIT} rt Xrandr Xxf86vm Xi m dl ${X11_LIBRARIES})
+endif()
 
 
 add_executable(SimpleOpenGLGLFW ${vr_example_source_files} ${vr_example_config_files})
 
-target_link_libraries(SimpleOpenGLGLFW MinVR ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY})
+target_link_libraries(SimpleOpenGLGLFW MinVR ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY} ${ALL_LIBS})
 
 set_property(TARGET SimpleOpenGLGLFW PROPERTY FOLDER "examples")
 
