integrated user input from adatee.cpp in the simple opengl example.  copied config example from old master into examples dir.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,7 +124,8 @@ include_directories(
 
 add_subdirectory(src)
 add_subdirectory(plugins)
-add_subdirectory(examples/SimpleOpenGLGLFW)
+add_subdirectory(examples/SimpleOpenGL)
+add_subdirectory(examples/ConfigExample)
 add_subdirectory(tests/config)
 
 
