Rotation from VRPN works now.

--- a/plugins/VRPN/CMakeLists.txt
+++ b/plugins/VRPN/CMakeLists.txt
@@ -50,11 +50,11 @@ source_group("Header Files" FILES ${HEADERFILES})
 		set_property(TARGET vrpn PROPERTY FOLDER "Dependencies")
 		set(VRPN_INCLUDE_DIR ${vrpn_INSTALL_DIR}/include CACHE INTERNAL "Directory of VRPN header files")
 		if(MSVC)
-			set(VRPN_LIBRARY optimized ${vrpn_INSTALL_DIR}/lib/vrpn.lib debug ${vrpn_INSTALL_DIR}/lib/vrpnd.lib CACHE INTERNAL "VRPN lib file")
+			set(VRPN_LIBRARY optimized ${vrpn_INSTALL_DIR}/lib/vrpn.lib optimized ${vrpn_INSTALL_DIR}/lib/quat.lib debug ${vrpn_INSTALL_DIR}/lib/vrpnd.lib ${vrpn_INSTALL_DIR}/lib/quatd.lib CACHE INTERNAL "VRPN lib file")
 			set(All_LIB ${MinVR_LIBRARIES})
 		else()
 #			set(VRPN_LIBRARY optimized ${vrpn_INSTALL_DIR}/lib/libvrpn.a debug ${vrpn_INSTALL_DIR}/lib/libvrpnd.a CACHE INTERNAL "VRPN lib file")
-			set(VRPN_LIBRARY ${vrpn_INSTALL_DIR}/lib/libvrpn.a CACHE INTERNAL "VRPN lib file")
+			set(VRPN_LIBRARY ${vrpn_INSTALL_DIR}/lib/libvrpn.a ${vrpn_INSTALL_DIR}/lib/libquat.a CACHE INTERNAL "VRPN lib file")
 		endif()	
 		add_definitions(-DUSE_VRPN)
 		#set(LIBS_ALL ${LIBS_ALL} ${VRPN_LIBRARY})
